--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "react-native-fs": "^2.20.0",
+    "whisper.rn": "^0.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
