--- a/app.json
+++ b/app.json
@@ -25,6 +25,30 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "@siteed/expo-audio-studio",
+        {
+          "enablePhoneStateHandling": true,
+          "enableNotifications": true,
+          "enableBackgroundAudio": true,
+          "enableDeviceDetection": true,
+          "iosBackgroundModes": {
+            "useVoIP": false,
+            "useAudio": false,
+            "useProcessing": false,
+            "useLocation": false,
+            "useExternalAccessory": false
+          },
+          "iosConfig": {
+            "allowBackgroundAudioControls": false,
+            "backgroundProcessingTitle": "Audio Recording",
+            "microphoneUsageDescription": "Custom microphone usage message",
+            "notificationUsageDescription": "Custom notification usage message"
+          }
+        }
+      ]
+    ]
   }
 }
