--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-fs": "^2.20.0",
-    "whisper.rn": "^0.4.3"
+    "whisper.rn": "^0.4.3",
+    "@siteed/expo-audio-studio": "^2.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
