--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "^54.0.20",
+    "expo-audio": "~1.0.13",
     "expo-dev-client": "~6.0.16",
     "expo-file-system": "~19.0.17",
     "expo-status-bar": "~3.0.8",
